# n-body

./: .env.example  .gitignore  CLAUDE.md  ENGINEERING_LOG.md  Makefile  README.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
.claude/agents/: implementer.md  planner.md  techwriter.md
.github/workflows/: ci-develop.yml  ci-main.yml
backend/: anomaly.py  conjunction.py  ingest.py  kalman.py  main.py  processing.py  propagator.py  requirements.txt
data/catalog/: altitude_verification_report.txt  catalog.json
data/control/: manifest.json
docs/: ENGINEERING_LOG.md  architecture.md  catalog-audit-2026-04-15.md  requirements.md  tech-debt.md
docs/plans/: 2026-03-28-anomaly.md  2026-03-28-frontend.md  2026-03-28-initial-scaffold.md  2026-03-28-kalman.md  2026-03-28-main.md  2026-03-28-propagator.md  2026-03-28-scripts.md  2026-03-29-conjunction-risk.md  2026-03-29-demo-scenario.md  2026-03-29-documentation-set.md  2026-03-29-frontend-improvements.md  2026-03-29-history-tracks-cones.md  2026-03-30-maneuver-classification-fix.md  (+9 more)
frontend/: history.html  index.html  package.json
scripts/: demo.py  freeze_dataset.py  replay.py  seed_conjunction.py  seed_maneuver.py  verify_catalog_altitudes.py  verify_catalog_ids.py
tests/: conftest.py  test_anomaly.py  test_anomaly_history_endpoint.py  test_conjunction.py  test_conjunction_endpoint.py  test_ingest.py  test_ingest_n2yo.py  test_kalman.py  test_main.py  test_processing.py  test_propagator.py  test_replay.py  test_seed_conjunction.py  test_seed_maneuver.py  test_track_endpoint.py
(+13 files in other folders)
